edit search button

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               </div>
               <div class="col-lg-2">                        
                   <fieldset>
-                      <button type="submit" class="main-button"><a href="/rooms.html" style="color: white;">Login</a></button>
+                      <button type="submit" class="main-button"><a href="/rooms.html" style="color: white;">Search</a></button>
                   </fieldset>
               </div>
             </div>
