update contact us

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li><a href="index.html" class="active">Home</a></li>
-              <li><a href="#about-us">About</a></li>
+              <li><a href="#offers">Offers</a></li>
               <li><a href="#">Gallery</a></li>
-              <li><a href="contact.html">Contact Us</a></li> 
+              <li><a href="#contact-us">Contact Us</a></li> 
               <li><div class="main-white-button"><a href="#">Login</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
@@ -147,7 +147,7 @@
  <section id="offers" class="offers">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-header text-center mb-5">
+        <div class="section-header text-center mb-5 section-heading">
           <h2>Offers</h2>
           
         </div>
@@ -321,6 +321,56 @@
     </div>
   </div>
 
+  <div class="contact-page" id="contact-us">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="inner-content">
+            <div class="row">
+              <div class="col-lg-6">
+                <div id="map">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.585774955846!2d110.38112171477844!3d-7.833588344355485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a5701a2ae1c23%3A0x173dbeeddc56d9e!2sAhmad%20Dahlan%20University%20-%20Campus%204!5e0!3m2!1sen!2sid!4v1672938412381!5m2!1sen!2sid" width="100%" height="650px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  
+                </div>
+              </div>
+              <div class="col-lg-6 align-self-center">
+                <form id="contact" action="" method="get">
+                  <div class="row">
+                    <div class="col-lg-6">
+                      <fieldset>
+                        <input type="name" name="name" id="name" placeholder="Name" autocomplete="on" required>
+                      </fieldset>
+                    </div>
+                    <div class="col-lg-6">
+                      <fieldset>
+                        <input type="surname" name="surname" id="surname" placeholder="Surname" autocomplete="on" required>
+                      </fieldset>
+                    </div>
+                    <div class="col-lg-12">
+                      <fieldset>
+                        <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
+                      </fieldset>
+                    </div>
+                    <div class="col-lg-12">
+                      <fieldset>
+                        <textarea name="message" type="text" class="form-control" id="message" placeholder="Message" required=""></textarea>  
+                      </fieldset>
+                    </div>
+                    <div class="col-lg-12">
+                      <fieldset>
+                        <button type="submit" id="form-submit" class="main-button "><i class="fa fa-paper-plane"></i> Send Message</button>
+                      </fieldset>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <footer>
     <div class="container">
@@ -330,7 +380,7 @@
             <div class="logo">
               <img src="assets/new_image/Logo_Black.svg" alt="Plot Listing">
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate fugiat optio nihil placeat ut vero voluptatibus quo nulla pariatur earum.</p>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -339,9 +389,9 @@
             <div class="row">
               <div class="col-lg-6 col-sm-6">
                 <ul>
-                  <li><a href="#">Categories</a></li>
-                  <li><a href="#">Reviews</a></li>
-                  <li><a href="#">Listing</a></li>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Gallery</a></li>
                   <li><a href="#">Contact Us</a></li>
                 </ul>
               </div>
