--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    
     <link rel="stylesheet" href="assets/css/animated.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/variables.css">
+    <link rel="stylesheet" href="vendor/glightbox/css/glightbox.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
@@ -61,6 +63,7 @@
               <li><a href="#offers">Offers</a></li>
               <li><a href="#">Gallery</a></li>
               <li><a href="#contact-us">Contact Us</a></li> 
+              <li class="d-block d-sm-none"><a href="#">Login</a></li> 
               <li><div class="main-white-button"><a href="#">Login</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
@@ -321,6 +324,148 @@
     </div>
   </div>
 
+  <section id="gallery" class="gallery">
+
+    <div class="container" data-aos="fade-up">
+
+      <div class="section-heading text-center pb-4">
+        <h2>Gallery</h2>
+      </div>
+
+      <div class="row gy-4 gallery-container" data-aos="fade-up" data-aos-delay="200">
+
+        <div class="col-lg-4 col-md-6 gallery-item ">
+          <div class="gallery-wrap">
+            <img src="assets/images/gallery/gallery-1.jpg" class="img-fluid" alt="">
+            <div class="gallery-info">
+              <h4>Villa Room</h4>
+              <p>--</p>
+              <div class="gallery-links">
+                <a href="assets/images/gallery/gallery-1.jpg" data-gallery="galleryGallery" class="portfokio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
+                <a href="gallery-details.html" title="More Details"><i class="bi bi-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 gallery-item ">
+          <div class="gallery-wrap">
+            <img src="assets/images/gallery/gallery-2.jpg" class="img-fluid" alt="">
+            <div class="gallery-info">
+              <h4>Villa Room</h4>
+              <p>--</p>
+              <div class="gallery-links">
+                <a href="assets/images/gallery/gallery-2.jpg" data-gallery="galleryGallery" class="portfokio-lightbox" title="Web 3"><i class="bi bi-plus"></i></a>
+                <a href="gallery-details.html" title="More Details"><i class="bi bi-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 gallery-item ">
+          <div class="gallery-wrap">
+            <img src="assets/images/gallery/gallery-3.jpg" class="img-fluid" alt="">
+            <div class="gallery-info">
+              <h4>Homestay Room</h4>
+              <p>--</p>
+              <div class="gallery-links">
+                <a href="assets/images/gallery/gallery-3.jpg" data-gallery="galleryGallery" class="portfokio-lightbox" title="App 2"><i class="bi bi-plus"></i></a>
+                <a href="gallery-details.html" title="More Details"><i class="bi bi-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 gallery-item ">
+          <div class="gallery-wrap">
+            <img src="assets/images/gallery/gallery-4.jpg" class="img-fluid" alt="">
+            <div class="gallery-info">
+              <h4>Homestay</h4>
+              <p>--</p>
+              <div class="gallery-links">
+                <a href="assets/images/gallery/gallery-4.jpg" data-gallery="galleryGallery" class="portfokio-lightbox" title="Card 2"><i class="bi bi-plus"></i></a>
+                <a href="gallery-details.html" title="More Details"><i class="bi bi-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 gallery-item ">
+          <div class="gallery-wrap">
+            <img src="assets/images/gallery/gallery-5.jpg" class="img-fluid" alt="">
+            <div class="gallery-info">
+              <h4>Sitting Room</h4>
+              <p>--</p>
+              <div class="gallery-links">
+                <a href="assets/images/gallery/gallery-5.jpg" data-gallery="galleryGallery" class="portfokio-lightbox" title="Web 2"><i class="bi bi-plus"></i></a>
+                <a href="gallery-details.html" title="More Details"><i class="bi bi-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 gallery-item ">
+          <div class="gallery-wrap">
+            <img src="assets/images/gallery/gallery-6.jpg" class="img-fluid" alt="">
+            <div class="gallery-info">
+              <h4>Villa Room</h4>
+              <p>--</p>
+              <div class="gallery-links">
+                <a href="assets/images/gallery/gallery-6.jpg" data-gallery="galleryGallery" class="portfokio-lightbox" title="App 3"><i class="bi bi-plus"></i></a>
+                <a href="gallery-details.html" title="More Details"><i class="bi bi-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 gallery-item ">
+          <div class="gallery-wrap">
+            <img src="assets/images/gallery/gallery-7.jpg" class="img-fluid" alt="">
+            <div class="gallery-info">
+              <h4>Cottage</h4>
+              <p>--</p>
+              <div class="gallery-links">
+                <a href="assets/images/gallery/gallery-7.jpg" data-gallery="galleryGallery" class="portfokio-lightbox" title="Card 1"><i class="bi bi-plus"></i></a>
+                <a href="gallery-details.html" title="More Details"><i class="bi bi-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 gallery-item ">
+          <div class="gallery-wrap">
+            <img src="assets/images/gallery/gallery-8.jpg" class="img-fluid" alt="">
+            <div class="gallery-info">
+              <h4>Homestay</h4>
+              <p>--</p>
+              <div class="gallery-links">
+                <a href="assets/images/gallery/gallery-8.jpg" data-gallery="galleryGallery" class="portfokio-lightbox" title="Card 3"><i class="bi bi-plus"></i></a>
+                <a href="gallery-details.html" title="More Details"><i class="bi bi-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 gallery-item ">
+          <div class="gallery-wrap">
+            <img src="assets/images/gallery/gallery-9.jpg" class="img-fluid" alt="">
+            <div class="gallery-info">
+              <h4>Homestay</h4>
+              <p>--</p>
+              <div class="gallery-links">
+                <a href="assets/images/gallery/gallery-9.jpg" data-gallery="galleryGallery" class="portfokio-lightbox" title="Web 3"><i class="bi bi-plus"></i></a>
+                <a href="gallery-details.html" title="More Details"><i class="bi bi-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+  </section><!-- End gallery Section -->
+
   <div class="contact-page" id="contact-us">
     <div class="container">
       <div class="row">
@@ -395,14 +540,6 @@
                   <li><a href="#">Contact Us</a></li>
                 </ul>
               </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Awards</a></li>
-                  <li><a href="#">Useful Sites</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
-                </ul>
-              </div>
             </div>
           </div>
         </div>
@@ -456,8 +593,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js" integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="assets/js/animation.js"></script>
+  
+  <script src="assets/js/isotope.js"></script>
   <script src="assets/js/imagesloaded.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script src="/vendor/glightbox/js/glightbox.min.js"></script>
+
+  <script src="/assets/js/main.js"></script>
 
 </body>
 
