--- a/rooms.html
+++ b/rooms.html
@@ -418,8 +418,8 @@
                   <ul class="list-group list-group-flush">
                     <li
                       class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                      Products
-                      <span>$53.98</span>
+                      Room
+                      <span>IDR 500,000</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                       Taxes
@@ -433,7 +433,7 @@
                           <p class="mb-0">(including VAT)</p>
                         </strong>
                       </div>
-                      <span><strong>$53.98</strong></span>
+                      <span><strong>IDR 500,000</strong></span>
                     </li>
                   </ul>
       
