--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
               <li><a href="#offers">Offers</a></li>
               <li><a href="#">Gallery</a></li>
               <li><a href="#contact-us">Contact Us</a></li> 
-              <li class="d-block d-sm-none"><a href="#">Login</a></li> 
-              <li><div class="main-white-button"><a href="#">Login</a></div></li> 
+              <li class="d-block d-sm-none"><a href="./signin.html">Login</a></li> 
+              <li><div class="main-white-button"><a href="./signin.html">Login</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
