--- a/signin.html
+++ b/signin.html
@@ -37,7 +37,7 @@
 
                     <a href="#" class="login__forgot">Forgot password?</a>
 
-                    <a href="#" class="login__button">Sign In</a>
+                    <a href="./index.html" class="login__button">Sign In</a>
 
                     <div>
                         <span class="login__account">Don't have an Account ?</span>
@@ -63,7 +63,7 @@
                         <input type="password" placeholder="Password" class="login__input">
                     </div>
 
-                    <a href="#" class="login__button">Sign Up</a>
+                    <a href="./index.html" class="login__button">Sign Up</a>
 
                     <div>
                         <span class="login__account">Already have an Account ?</span>
